<resources>
    <string name="app_name">KitchenAccountant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_income">Incomes</string>
    <string name="menu_expense">Expenses</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_view">View Transactions</string>

    <!-- Form field hints -->
    <string name="choose_income_category_prompt">Choose Income Category</string>
    <string name="collected_from_hint">Collected From</string>
    <string name="amount_hint">Amount</string>
    <string name="received_date_hint">Received Date</string>
    <string name="remarks_hint">Remarks</string>

    <!-- Button text -->
    <string name="submit_income_button_text">Submit</string>

    <!-- Income categories -->
    <string-array name="income_categories">
        <item>Monthly payment</item>
        <item>Sponsorship</item>
        <item>Daily coupon sales</item>
        <item>Programs</item>
        <item>Payment for materials</item>
    </string-array>

    <!-- Expense Categories -->
    <string name="choose_expense_category_prompt">Choose Category</string>
    <string-array name="expense_categories">
        <item>Groceries</item>
        <item>Diary</item>
        <item>Repairs</item>
        <item>Vegetables</item>
        <item>Salary</item>
        <item>Miscellaneous</item>
        <!-- Add more categories as needed -->
    </string-array>

    <!-- Expense Form Hints -->
    <string name="description_hint">Description</string>
    <string name="amount_expense_hint">Amount</string>
    <string name="expense_date_hint">Expense Date</string>
    <string name="remittance_name_hint">Remittance Name</string>
    <string name="remittance_mobile_hint">Remittance Mobile</string>
    <string name="remittance_address_hint">Remittance Address</string>
    <string name="choose_pay_via_prompt">Choose Pay Via</string>
    <string-array name="pay_via_options">
        <item>Online</item>
        <item>Cash</item>
    </string-array>

    <!-- Button Text -->
    <string name="submit_expense_button_text">Submit</string>

</resources>