<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_expense_category_prompt" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_text_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/expense_date_hint" />

    <EditText
        android:id="@+id/edit_text_remittance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remittance_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_remittance_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remittance_mobile_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_text_remittance_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remittance_address_hint"
        android:inputType="textPostalAddress" />

    <Spinner
        android:id="@+id/spinner_pay_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_pay_via_prompt" />

    <Button
        android:id="@+id/button_submit_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_expense_button_text" />

</LinearLayout>
