<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/deposit"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/withdrawal"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/baseline_account_balance_wallet_24"
            android:title="@string/menu_view" />

    </group>
</menu>