<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kitchenaccountant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_income"
        android:name="com.example.kitchenaccountant.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_incomes" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.example.kitchenaccountant.ui.expenses.ExpenseFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.kitchenaccountant.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_view"
        android:name="com.example.kitchenaccountant.ui.view.ViewFragment"
        android:label="View Transactions"
        tools:layout="@layout/fragment_view" >
    </fragment>

</navigation>